--- a/requirements.txt
+++ b/requirements.txt
@@ -1,165 +1,7 @@
-
-argon2-cffi==25.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==3.0.0
-async-lru==2.0.5
-attrs==25.3.0
-babel==2.17.0
-beautifulsoup4==4.13.4
-bleach==6.2.0
-blinker==1.9.0
-certifi==2025.6.15
-cffi==1.17.1
-charset-normalizer==3.4.2
-click==8.1.8
-colorama==0.4.6
-comm==0.2.2
-contourpy==1.3.0
-cycler==0.12.1
 dash==3.1.1
-debugpy==1.8.14
-decorator==5.2.1
-defusedxml==0.7.1
-et-xmlfile==1.1.0
-exceptiongroup==1.3.0
-executing==2.2.0
-fastjsonschema==2.21.1
-Flask==3.1.1
-fonttools==4.56.0
-fqdn==1.5.1
-gTTS==2.5.4
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
-idna==3.10
-importlib_metadata==8.7.0
-importlib_resources==6.5.2
-ipykernel==6.29.5
-ipython==8.18.1
-ipywidgets==8.1.7
-isoduration==20.11.0
-itsdangerous==2.2.0
-jedi==0.19.2
-Jinja2==3.1.6
-json5==0.12.0
-jsonpointer==3.0.0
-jsonschema==4.24.0
-jsonschema-specifications==2025.4.1
-jupyter==1.1.1
-jupyter-console==6.6.3
-jupyter-events==0.12.0
-jupyter-lsp==2.2.5
-jupyter_client==7.4.9
-jupyter_core==5.8.1
-jupyter_server==2.16.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.4.4
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.15
-kiwisolver==1.4.7
-MarkupSafe==3.0.2
+plotly==5.24.1
+pandas==2.2.3
+numpy==2.2.1
 matplotlib==3.9.4
-matplotlib-inline==0.1.7
-mistune==3.1.3
-mkl-service==2.4.0
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-notebook==7.4.4
-notebook_shim==0.2.4
-numexpr @ file:///C:/b/abs_05o8p7bfml/croot/numexpr_1730215959182/work
-numpy @ file:///C:/b/abs_c1ywpu18ar/croot/numpy_and_numpy_base_1708638681471/work/dist/numpy-1.26.4-cp39-cp39-win_amd64.whl#sha256=f284633067fde4bb078a09085a1c9e99a3218c129f5312b7b3d76c9340442a25
-openpyxl @ file:///C:/b/abs_6cdczthntz/croot/openpyxl_1736371239628/work
-outcome==1.3.0.post0
-overrides==7.7.0
-packaging==25.0
-pandas @ file:///C:/b/abs_cdcgk91igc/croots/recipe/pandas_1663772960432/work
-pandocfilters==1.5.1
-parso==0.8.4
-pefile @ file:///C:/b/abs_68oy9ka6fm/croot/pefile_1720651782540/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-pillow==11.1.0
-platformdirs==4.3.8
-playsound==1.3.0
-plotly @ file:///C:/b/abs_13yyfuc6x9/croot/plotly_1744960898545/work
-pluggy @ file:///C:/b/abs_dfec_m79vo/croot/pluggy_1733170145382/work
-prometheus_client==0.22.1
-prompt_toolkit==3.0.51
-psutil==7.0.0
-pure_eval==0.2.3
-PyAutoGUI==0.9.54
-pycosat @ file:///C:/b/abs_18nblzzn70/croot/pycosat_1736868434419/work
-pycparser==2.22
-pydantic==2.10.6
-pydantic_core==2.27.2
-PyGetWindow==0.0.9
-Pygments==2.19.2
-pyinstaller @ file:///C:/b/abs_09h007ff52/croot/pyinstaller_1721682848440/work
-pyinstaller-hooks-contrib @ file:///C:/b/abs_deumjuw0e0/croot/pyinstaller-hooks-contrib_1721675898298/work
-PyMsgBox==1.0.9
-pyparsing==3.2.1
-pyperclip==1.9.0
-PyQt6==6.7.1
-PyQt6_sip @ file:///C:/b/abs_f47pmp6xmn/croot/pyqt-split_1744804513582/work/pyqt_sip
-PyRect==0.2.0
-PyScreeze==1.0.1
-PySide6==6.8.2.1
-PySide6_Addons==6.8.2.1
-PySide6_Essentials==6.8.2.1
-PySocks @ file:///C:/ci/pysocks_1605307512533/work
-python-dateutil==2.9.0.post0
-python-json-logger==3.3.0
-pytweening==1.2.0
-pytz @ file:///C:/b/abs_6ap4tsz1ox/croot/pytz_1713974360290/work
-pywin32==310
-pywin32-ctypes @ file:///C:/b/abs_2cfx5l4nvi/croot/pywin32-ctypes_1709340246092/work
-pywinpty==2.0.15
-PyYAML==6.0.2
-pyzmq==24.0.1
-qtconsole @ file:///C:/b/abs_077eiqc5gw/croot/qtconsole_1744633984381/work
-QtPy @ file:///C:/b/abs_derqu__3p8/croot/qtpy_1700144907661/work
-referencing==0.36.2
-requests==2.32.4
-retrying==1.4.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.26.0
-ruamel.yaml @ file:///C:/b/abs_0cunwx_ww6/croot/ruamel.yaml_1727980181547/work
-ruamel.yaml.clib @ file:///C:/b/abs_5fk8zi6n09/croot/ruamel.yaml.clib_1727769837359/work
-seaborn==0.13.2
-selenium==4.31.0
-Send2Trash==1.8.3
-shiboken6==6.8.2.1
-sip @ file:///C:/b/abs_5cto136kse/croot/sip_1738856220313/work
-six==1.17.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.7
-stack-data==0.6.3
-starlette==0.46.1
-terminado==0.18.1
-tinycss2==1.4.0
-tomli==2.2.1
-tornado==6.5.1
-tqdm @ file:///C:/b/abs_0eh9b6xugj/croot/tqdm_1738945553987/work
-traitlets==5.14.3
-trio==0.29.0
-trio-websocket==0.12.2
-types-python-dateutil==2.9.0.20250708
-typing_extensions==4.14.1
-tzdata @ file:///croot/python-tzdata_1690578112552/work
-uri-template==1.3.0
-urllib3==2.5.0
-wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
-Werkzeug==3.1.3
-widgetsnbextension==4.0.14
-win-inet-pton @ file:///C:/ci/win_inet_pton_1605306162074/work
-wsproto==1.2.0
-zipp==3.23.0
-zstandard @ file:///C:/b/abs_31t8xmrv_h/croot/zstandard_1731356578015/work
+pytz==2024.2
+openpyxl==3.1.5
